Fixing scroll issue on mobile attempt

--- a/style.css
+++ b/style.css
@@ -12,9 +12,14 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   margin: 0;
   font-size: 7.5vmin;
+}
+html,
+body {
+  height: 100%;
+  margin: 0;
+  overflow: hidden;
 }
 #game-board {
   display: grid;
